--- a/src/frontend/src/assets/sass/lbd/_variables.scss
+++ b/src/frontend/src/assets/sass/lbd/_variables.scss
@@ -35,8 +35,8 @@ $success-color:              #87CB16 !default;
 $success-bg:                 #87CB16 !default;
 $success-states-color:       #049F0C !default;
 
-$info-color:                 #1DC7EA !default;
-$info-bg:                    #1DC7EA !default;
+$info-color:                 #e6ac0d !default;
+$info-bg:                    #e2aa30 !default;
 $info-states-color:          lighten($info-color, 8%) !default;
 
 $warning-color:              #FF9500 !default;
