Emails with Request Bodies
Booking and collection emails. Will update with mongodb and reminder email soon.

--- a/src/main/resources/templates/E-Passes Email Confirmation.html
+++ b/src/main/resources/templates/E-Passes Email Confirmation.html
@@ -1,7 +1,7 @@
 <html>
 <head></head>
 <body>
-    <p>Dear ${firstName} ${lastName},</p>
+    <p>Dear ${name},</p>
     <p>We are pleased to inform that your booking to ${attractionName} is confirmed as follows:</p>
     <p>Date of Visit : Saturday, 12 February 2022 (1 day only)</p>
     <p>Membership ID : ${corpPassNumber}</p>
