--- a/src/main/resources/templates/Password Email.html
+++ b/src/main/resources/templates/Password Email.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
     <p>Hello,</p>
-    <p>Please use this token to compelte registration process: ${token}</b></p>
+    <p>Please use this token to complete registration process: ${token} </b></p>
     <p>Thanks!</p>
 
 </body>
