--- a/src/main/resources/templates/E-Passes Email Confirmation.html
+++ b/src/main/resources/templates/E-Passes Email Confirmation.html
@@ -3,7 +3,7 @@
 <body>
     <p>Dear ${name},</p>
     <p>We are pleased to inform that your booking to ${attractionName} is confirmed as follows:</p>
-    <p>Date of Visit : Saturday, 12 February 2022 (1 day only)</p>
+    <p>Date of Visit : Saturday, 12 February 2022 (1 day only) ${loanDate}</p>
     <p>Membership ID : ${corpPassNumber}</p>
     <br>
     <p>For any change in visit date, you are required to cancel your booking (at least 1 day before)
