frontend clean up

--- a/src/frontend/src/assets/sass/lbd/_navbars.scss
+++ b/src/frontend/src/assets/sass/lbd/_navbars.scss
@@ -29,6 +29,7 @@
     .navbar-toggler{
         width: 37px;
         height: 27px;
+        margin-left:50%;
         vertical-align: middle;
         outline: 0;
         cursor: pointer;
