--- a/src/frontend/src/assets/css/light-dashboard.css
+++ b/src/frontend/src/assets/css/light-dashboard.css
@@ -5568,12 +5568,12 @@
     /* position: relative; */
     z-index: 2;
     float: right;
-    width: calc(100% - 260px);
+    width: 100%;
     min-height: 100%;
   }
   .main-panel > .content {
-    padding: 30px 15px 0 15px;
-    min-height: calc(100% - 123px);
+    padding: 0px 0px 0px 0px;
+    min-height: 100%;
   }
   .main-panel > .content .row .col-md-12 > .title {
     margin-top: 0;
