--- a/src/frontend/src/assets/css/light-dashboard.css
+++ b/src/frontend/src/assets/css/light-dashboard.css
@@ -5563,13 +5563,16 @@
   }
   
   .main-panel {
+        /* max-height: 100%; */
+    /* height: 100%; */
     background-color: #f4f3ef;
-    overflow: auto;
-    /* position: relative; */
-    z-index: 2;
+
+    /* overflow: auto;
+    position: relative; */
+    /* z-index: 2;
     float: right;
     width: 100%;
-    min-height: 100%;
+    min-height: 100%; */
   }
   .main-panel > .content {
     padding: 0px 0px 0px 0px;
@@ -5597,11 +5600,7 @@
     -webkit-overflow-scrolling: touch;
   }
   
-  .sidebar,
-  .main-panel {
-    max-height: 100%;
-    height: 100%;
-  }
+
   
   .perfect-scrollbar-on .sidebar .sidebar-wrapper, .sidebar .sidebar-wrapper, .perfect-scrollbar-on
   .main-panel,
