--- a/src/frontend/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/src/frontend/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -302,8 +302,8 @@ body > .navbar-collapse{
 
 .sidebar,
 .main-panel{
-    max-height: 100%;
-    height: 100%;
+    // max-height: 100%;
+    // height: 100%;
     -webkit-transition-property: top,bottom;
     transition-property: top,bottom;
     -webkit-transition-duration: .2s,.2s;
